--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,17 +3,15 @@ on: # rebuild any PRs and main branch changes
   workflow_dispatch:
 
 jobs:
-#  build: # make sure build/ci work properly
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
-#      - run: |
-#          npm install
-#      - run: |
-#          npm run all
-  test: # make sure the action works on a clean machine without building
-    runs-on: ubuntu-latest
-    steps:
+  build: # make sure build/ci work properly
+   runs-on: ubuntu-latest
+   steps:
+      - uses: actions/checkout@v3
+      - run: |
+          npm install
+      - run: |
+          npm run all
+
       - uses: actions/checkout@v3
       - uses: ./
         with:
