--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ jobs:
           npm install
       - run: |
           npm run all
+      - run: |
+          npm run axios
 
       - uses: actions/checkout@v3
       - uses: ./
