--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,9 @@ jobs:
       - run: |
           npm install
       - run: |
-          npm run all
+          npm install axios
       - run: |
-          npm run axios
+          npm run all
 
       - uses: actions/checkout@v3
       - uses: ./
